force-app/main/default/objects/Pricebook2/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant
Created Date: 10th Nov 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1222
Purpose: This field is used to identify the department (Dealer) of the pricebook.</description>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>