force-app/main/default/objects/Pricebook2/fields/Is_Regional_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Is_Regional_Pricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: Mayank Pant
Created Date: 10th Nov 2020
Purpose: Field to identify if pricebook is regional/country wise and used by NSC&apos;s or GME&apos;s</description>
    <label>Is Regional Pricebook</label>
    <type>Checkbox</type>
</CustomField>