force-app/main/default/objects/Pricebook2/fields/IsPriceBookAccessible__c.field-meta.xml
<CustomField>
    <fullName>IsPriceBookAccessible__c</fullName>
    <description>This field will help in determining if user has access to the price book entry.</description>
    <formula>IF( $Profile.Name = &apos;System Administrator&apos;,true, if(Department__r.DealerCode__c =  $User.Department, true, 
if($Profile.Name = &apos;NSC&apos; &amp;&amp;  TEXT(Country__c )= $User.Country , true,false)))</formula>
    <label>IsPriceBookAccessible</label>
    <type>Checkbox</type>
</CustomField>