force-app/main/default/objects/Pricebook2/fields/Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync__c</fullName>
    <description>Create by Manoj Kumar</description>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>