force-app/main/default/objects/Pricebook2/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose:</description>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subsidiary</valueSetName>
    </valueSet>
</CustomField>