force-app/main/default/objects/Pricebook2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 22nd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose:</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>