force-app/main/default/objects/Pricebook2/listViews/ALL_Pricebooks.listView-meta.xml
<ListView>
    <fullName>ALL_Pricebooks</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>Department__c</columns>
    <columns>Is_Regional_Pricebook__c</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>Country__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Pricebooks</label>
</ListView>