force-app/main/default/objects/Pricebook2/listViews/Germany_Dealers_PriceBook.listView-meta.xml
<ListView>
    <fullName>Germany_Dealers_PriceBook</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>Country__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Regional_Pricebook__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Germany</value>
    </filters>
    <label>Germany Dealers PriceBook</label>
</ListView>