force-app/main/default/objects/Pricebook2/listViews/PankajTest.listView-meta.xml
<ListView>
    <fullName>PankajTest</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>Country__c</columns>
    <columns>Is_Regional_Pricebook__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>pmish</value>
    </filters>
    <label>PankajTest</label>
</ListView>