force-app/main/default/objects/Pricebook2/listViews/Regional_PriceBook.listView-meta.xml
<ListView>
    <fullName>Regional_PriceBook</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>Department__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Regional_Pricebook__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Regional PriceBook</label>
</ListView>